boards/common/bulk.h

 bulk_t;
static inline uint8_t *bulk_buf(bulk_t *b, uint32_t idx)
{
	uint32_t arrs = ((3u * 4u * b->nbuf) + 31u) & ~31u;
	return (uint8_t *)b + BULK_HDR_BYTES + arrs + idx * b->bufsz;
}
/* bulk_init — ONE side (whoever owns the window's bring-up) initializes; the other side
 * polls bulk_valid() before first use. Every buffer starts in the free ring. */
static inline void bulk_init(bulk_t *b, uint32_t nbuf, uint32_t bufsz)
{
	XIOC_ST(&b->magic, 0u);
	XIOC_DMB();
	b->nbuf = nbuf;
	b->bufsz = bufsz;
	XIOC_ST(&b->overflows, 0u);
	XIOC_ST(&b->r_head, 0u);
	XIOC_ST(&b->r_tail, 0u);
	XIOC_ST(&b->f_tail, 0u);
	volatile uint32_t *fr = bulk_free_ring(b);
	for (uint32_t i = 0; i < nbuf; i++) {
		XIOC_ST(&fr[i], i);
	}
	XIOC_ST(&b->f_head, nbuf);
	XIOC_DMB();
	XIOC_ST(&b->magic, BULK_MAGIC);
	XIOC_DMB();
}
/* bulk_valid — the attach handshake: 1 once the geometry and pre-filled free ring are
 * VISIBLE, not merely the flag. The trailing DMB pairs with bulk_init's pre-magic DMB:
 * without it the caller's subsequent nbuf/bufsz/ring reads could be satisfied ahead of
 * the magic load and see the pre-init window (codex #213). */
static inline int bulk_valid(bulk_t *b)
{
	if (XIOC_LD(&b->magic) != BULK_MAGIC) {
		return 0;
	}
	XIOC_DMB();
	return 1;
}
/* bulk_loan — pop the free ring: a buffer index the producer may fill, or -1 when the
 * pool is exhausted (counted in overflows; the producer's value is dropped-newest —
 * drop-OLDEST would mean reclaiming a buffer the consumer may hold, see the survey).
 * A loaned buffer is the producer's until published; there is no un-loan (see the
 * ownership rules above). */
static inline int bulk_loan(bulk_t *b)
{
	uint32_t t = XIOC_LD(&b->f_tail); /* producer-owned */
	uint32_t h = XIOC_LD(&b->f_head);
	if (t == h) {
		uint32_t ov = XIOC_LD(&b->overflows);
		XIOC_ST(&b->overflows, ov + 1u);
		return -1;
	}
	XIOC_DMB(); /* the entry write precedes the head we just observed */
	uint32_t idx = XIOC_LD(&bulk_free_ring(b)[t % b->nbuf]);
	XIOC_DMB(); /* the entry load completes before the tail advance is visible — without
	             * this, Arm's load->store reordering lets the far side see the slot as
	             * consumable while our read is still in flight */
	XIOC_ST(&b->f_tail, t + 1u);
	return (int)idx;
}
/* bulk_overflows — the producer's failed-loan count (REQ-BULK-002's observability:
 * back-pressure loss is a number, never silence). */
static inline uint32_t bulk_overflows(bulk_t *b)
{
	return XIOC_LD(&b->overflows);
}
/* bulk_publish — transfer a loaned+filled buffer to the consumer. The producer must not
 * touch the buffer afterwards. len rides a per-buffer cell written before the descriptor
 * (so it is in hand when the index becomes visible). */
static inline void bulk_publish(bulk_t *b, uint32_t idx, uint32_t len)
{
	XIOC_ST(&bulk_len_arr(b)[idx], len);
	uint32_t h = XIOC_LD(&b->r_head); /* producer-owned */
	XIOC_ST(&bulk_ready_ring(b)[h % b->nbuf], idx);
	XIOC_DMB(); /* payload + len + entry visible before the head moves */
	XIOC_ST(&b->r_head, h + 1u);
}
/* bulk_ready — published payloads waiting (consumer side; a poll cheap enough to sit in
 * a service loop — the P1 doorbell). */
static inline uint32_t bulk_ready(bulk_t *b)
{
	return XIOC_LD(&b->r_head) - XIOC_LD(&b->r_tail);
}
/* bulk_take — pop the oldest published buffer: its index (payload at bulk_buf(), length
 * in *len), or -1 when nothing is pending. The consumer owns the buffer until release. */
static inline int bulk_take(bulk_t *b, uint32_t *len)
{
	uint32_t t = XIOC_LD(&b->r_tail); /* consumer-owned */
	uint32_t h = XIOC_LD(&b->r_head);
	if (t == h) {
		return -1;
	}
	XIOC_DMB(); /* entry + len + payload precede the head we just observed */
	uint32_t idx = XIOC_LD(&bulk_ready_ring(b)[t % b->nbuf]);
	*len = XIOC_LD(&bulk_len_arr(b)[idx]);
	XIOC_DMB(); /* entry/len loads complete before the tail advance is visible (the
	             * load->store reordering hole — same reasoning as bulk_loan) */
	XIOC_ST(&b->r_tail, t + 1u);
	return (int)idx;
}
/* bulk_release — return a taken buffer to the pool; it may be loaned again after this.
 * CONSUMER-side only (it writes f_head): a producer never calls this — see the
 * ownership rules at the top. The DMB below also orders every prior payload read
 * before the head move, so a re-loaning producer stays off the bytes until the
 * consumer is done with them. */
static inline void bulk_release(bulk_t *b, uint32_t idx)
{
	uint32_t h = XIOC_LD(&b->f_head); /* consumer-owned */
	XIOC_ST(&bulk_free_ring(b)[h % b->nbuf], idx);
	XIOC_DMB(); /* the entry (and every prior payload read) precedes the head move */
	XIOC_ST(&b->f_head, h + 1u);
}