examples/h735_app/board.h

/* Start the DWT cycle counter; board_now_us() reads it. Call after the clock init. */
void board_timebase_init(void);
/* Monotonic microseconds since board_timebase_init(). */
uint64_t board_now_us(void);