examples/h755_m4_app/gen/loom_gen.v

// Code generated by tools/loom2v from ecu.toml (partition "m4",
// image = "examples/h755_m4_app") — DO NOT EDIT. The bus owner's generator run owns this file:
// regenerate from the OWNER example (its ecu.toml declares this whole node).
module gen

import ports
import app
import loom

struct Thread_m4_app_state {
mut:
	m4_load app.M4Load
}

struct Thread_m4_stress_state {
mut:
	m4_churn app.M4Churn
}

fn handler_m4_m4_load_on_10ms(ctx voidptr) {
	mut st := unsafe { &Thread_m4_app_state(ctx) }
	mut inp := ports.M4LoadIn{}
	mut outp := ports.M4LoadOut{}
	st.m4_load.on_10ms(inp, mut outp)
	C.duo_pub(0, u32(outp.m4_count.n), u32(outp.m4_count.acc))
}

fn handler_m4_m4_churn_on_2ms(ctx voidptr) {
	mut st := unsafe { &Thread_m4_stress_state(ctx) }
	mut inp := ports.M4ChurnIn{}
	mut outp := ports.M4ChurnOut{}
	st.m4_churn.on_2ms(inp, mut outp)
	C.duo_pub(1, u32(outp.m4_stress.k), u32(outp.m4_stress.chk))
}

// this image owns NO clocks, NO pins, NO bus — the owner core brings those up.
fn C.board_now_us() u64 // DWT-based µs (this core's own counter, glue C)
fn C.duo_wait_clocks() // park until the owner signals clocks-ready (duo.h)
fn C.board_timebase_init()
fn C.duo_ioc_init() // the shared xioc pool (satellite is the writer side)
fn C.duo_load_pub(int, u16) // publish this core's per-mille load for the owner's CpuLoad (duo.h)
fn C.duo_layout_retract() // boot FIRST act: close polling before touching channels
fn C.duo_layout_publish() // layout-id handshake: owner polls nothing until this
fn C.duo_pub(int, u32, u32) // xioc writer — slots from gen/duo_gen.h
fn C._tx_thread_sleep(u32) u32
fn C._tx_initialize_kernel_enter()
fn C._tx_thread_create(voidptr, &char, fn (u32), u32, voidptr, u32, u32, u32, u32, u32) u32
fn C.duo_bulk_produce() // platform producer service (glue): loan+fill+publish
fn C.trace_arm() // this core's recorder free-runs; the owner re-arms per session
fn C.trace_bind_thread(voidptr)
fn C.duo_trace_service() // the dtrace handoff (owner posts, we snapshot/ack)
fn C.trace_fb(u32, u64, u32)

fn trace_clock() u64 {
	return C.board_now_us()
}

fn trace_fb_hook_m4_app(ctx voidptr, idx int, start_us u64, dt_us u64) {
	hid := match idx {
		0 { u32(4) }
		else { u32(0x3fff) } // unknown local idx — the 14-bit id space top
	}
	C.trace_fb(hid, start_us, u32(dt_us))
}

fn trace_fb_hook_m4_stress(ctx voidptr, idx int, start_us u64, dt_us u64) {
	hid := match idx {
		0 { u32(5) }
		else { u32(0x3fff) } // unknown local idx — the 14-bit id space top
	}
	C.trace_fb(hid, start_us, u32(dt_us))
}

__global (
	g_m4_app_tcb   [32]u64  // >= sizeof(TX_THREAD) (200 B), 8-byte aligned
	g_m4_app_stack [4096]u8
	g_sched_m4_app loom.Scheduler // bss, never an entry-frame local
	g_m4_stress_tcb   [32]u64  // >= sizeof(TX_THREAD) (200 B), 8-byte aligned
	g_m4_stress_stack [4096]u8
	g_sched_m4_stress loom.Scheduler // bss, never an entry-frame local
)

fn run_m4_app() {
	mut st := Thread_m4_app_state{} // small + carries the FB field defaults: stack is right
	mut sched := &g_sched_m4_app // module-sized: lives in bss, not this lifetime frame
	sched.every(10000, handler_m4_m4_load_on_10ms, &st)
	tick_us := u64(1000)
	sched.set_trace_hook(trace_fb_hook_m4_app, unsafe { nil })
	for {
		t0 := C.board_now_us()
		sched.run_profiled(trace_clock)
		t1 := C.board_now_us()
		if t1 - t0 > tick_us { // pass exceeded its tick budget -> overrun
			sched.mark_overrun()
		}
		C.duo_trace_service() // ~one poll per tick: plenty for the dump handshake
		C.duo_load_pub(1, u16(sched.load_permille() + g_sched_m4_stress.load_permille()))
		C.duo_bulk_produce() // cross-core bulk producer (platform-owned pool)
		C.duo_layout_publish() // REPUBLISH per tick: the owner retracts the id at ITS
		// boot (SRAM survives an owner-only reset — a retained id + retained channels
		// would replay one stale frame); a live satellite restores it within a tick
		C._tx_thread_sleep(u32(1))
	}
}

fn run_m4_stress() {
	mut st := Thread_m4_stress_state{} // small + carries the FB field defaults: stack is right
	mut sched := &g_sched_m4_stress // module-sized: lives in bss, not this lifetime frame
	sched.every(2000, handler_m4_m4_churn_on_2ms, &st)
	tick_us := u64(1000)
	sched.set_trace_hook(trace_fb_hook_m4_stress, unsafe { nil })
	for {
		t0 := C.board_now_us()
		sched.run_profiled(trace_clock)
		t1 := C.board_now_us()
		if t1 - t0 > tick_us { // pass exceeded its tick budget -> overrun
			sched.mark_overrun()
		}
		C._tx_thread_sleep(u32(1))
	}
}

fn m4_app_thread_entry(input u32) {
	run_m4_app()
}

fn m4_stress_thread_entry(input u32) {
	run_m4_stress()
}

@[export: 'tx_application_define']
fn tx_application_define(first_unused voidptr) {
	C._tx_thread_create(&g_m4_app_tcb[0], c'm4_app', m4_app_thread_entry, u32(0),
		&g_m4_app_stack[0], u32(g_m4_app_stack.len), u32(11), u32(11), u32(0), u32(1))
	C.trace_bind_thread(&g_m4_app_tcb[0]) // deterministic thread ids, creation order
	C._tx_thread_create(&g_m4_stress_tcb[0], c'm4_stress', m4_stress_thread_entry, u32(0),
		&g_m4_stress_stack[0], u32(g_m4_stress_stack.len), u32(12), u32(12), u32(0), u32(1))
	C.trace_bind_thread(&g_m4_stress_tcb[0]) // deterministic thread ids, creation order
}

// boot: the whole image entry — the example's main.v is just `gen.boot()`.
pub fn boot() {
	C.duo_wait_clocks() // SysTick assumes the final HCLK: wait out the owner's PLL
	C.duo_layout_retract() // BEFORE any channel init: a satellite-only restart
	// beside a live owner must close polling first (retained same-build id)
	C.board_timebase_init()
	C.duo_ioc_init()
	C.duo_layout_publish() // AFTER every channel init: the owner may poll now
	C.trace_arm()
	C._tx_initialize_kernel_enter() // never returns
}

// --- Bulk Transport Pools (docs/bulk-transport.md) ---
#flag -I @VMODROOT/boards/common
#include "bulk.h"

struct C.bulk_t {}
fn C.bulk_init(b &C.bulk_t, nbuf u32, bufsz u32)
fn C.bulk_valid(b &C.bulk_t) int
fn C.bulk_loan(b &C.bulk_t) int
fn C.bulk_publish(b &C.bulk_t, idx u32, len u32)
fn C.bulk_ready(b &C.bulk_t) u32
fn C.bulk_take(b &C.bulk_t, len &u32) int
fn C.bulk_release(b &C.bulk_t, idx u32)
fn C.bulk_buf(b &C.bulk_t, idx u32) &u8
fn C.bulk_overflows(b &C.bulk_t) u32
fn C.duo_bulk_base() usize // cross-core bulk region base (board glue; H755 = DUO_BULK_ADDR)

// --- Bulk pool: xfer (4 x 256 B; m4 -> app; shared window @ base+0x0) ---
fn bulk_xfer_ptr() &C.bulk_t {
	return &C.bulk_t(voidptr(C.duo_bulk_base() + usize(0)))
}

pub fn bulk_xfer_init() {
	C.bulk_init(bulk_xfer_ptr(), u32(4), u32(256))
}

pub fn bulk_xfer_loan() int {
	return int(C.bulk_loan(bulk_xfer_ptr()))
}

pub fn bulk_xfer_publish(idx int, len u32) bool {
	if idx < 0 || idx >= 4 || len > u32(256) {
		return false
	}
	C.bulk_publish(bulk_xfer_ptr(), u32(idx), len)
	return true
}

pub fn bulk_xfer_overflows() u32 {
	return C.bulk_overflows(bulk_xfer_ptr())
}

pub fn bulk_xfer_buf(idx int) &u8 {
	if idx < 0 || idx >= 4 {
		return unsafe { nil }
	}
	return C.bulk_buf(bulk_xfer_ptr(), u32(idx))
}

